tests/paczka1/fuzzy1/30897117.err
Error in line 2: 93iKpBfWH5o A105 26,2
Error in line 4: FKBxP A775 99,7
Error in line 1: 4vaNNwSqe S298 72,6
Error in line 11: QhW0xP S298 36,9
Error in line 30: FKBxP A952 11,6
Error in line 26: QhW0xP A952 30,7
Error in line 29: 4vaNNwSqe A775 6,4
